--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -3,13 +3,22 @@
 	font-size: .9rem;
 	margin-right: 1.3rem;
 	text-decoration: none;
+	text-transform: uppercase;
 }
 .nav-item:hover {
 	color: #666;
 }
 
 .header {
-	padding: 1rem 0 3rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
+	padding: 1rem 0 1rem 0;
+	border: 1px solid red;
+	@media (min-width: 600px) {
+		flex-direction: row;
+	}
 }
 
 .title {
