--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,9 +1,7 @@
 html {
-	background-color: #e4e4e1;
-	background-image: linear-gradient(45deg, #93a5cf 0%, #e4efe9 100%);
+	background-color: white;
 }
 
 a {
 	text-decoration: none;
-	color: red;
 }
