--- a/src/components/footer.module.scss
+++ b/src/components/footer.module.scss
@@ -1,6 +1,13 @@
 .footer {
-	margin-bottom: 3rem;
 	display: flex;
+	flex-grow: 1;
+	flex-direction: column;
 	align-items: center;
 	justify-content: space-between;
+	min-width: 100vw;
+	max-height: 30px;
+	padding: 1rem;
+	@media (min-width: 400px) {
+		flex-direction: row;
+	}
 }
