--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -1,12 +1,17 @@
 .container {
-	margin: 0 auto;
-	max-width: 750px;
-	padding: 1rem;
 	display: flex;
+	flex-grow: 1;
+	align-items: center;
 	flex-direction: column;
 	min-height: 100vh;
+	min-width: 100vw;
+	min-width: 100%;
+	// border: 3px dashed blue;
 }
 
 .content {
 	flex-grow: 1;
+	padding: 1rem;
+	margin-top: 120px;
+	// border: 2px solid orange;
 }
