--- a/src/components/footer.module.scss
+++ b/src/components/footer.module.scss
@@ -6,7 +6,7 @@
 	justify-content: space-between;
 	min-width: 100vw;
 	max-height: 30px;
-	padding: 1rem;
+	padding: 1rem 2rem 1rem 2rem;
 	@media (min-width: 400px) {
 		flex-direction: row;
 	}
