--- a/src/pages/blog.module.scss
+++ b/src/pages/blog.module.scss
@@ -1,4 +1,7 @@
+@import '../styles/variables.scss';
+
 .posts {
+	width: 100%;
 	list-style-type: none;
 	margin: 0;
 }
@@ -6,14 +9,14 @@
 .post {
 	margin: 1rem 0;
 	a {
-		background: #f4f4f4;
+		background-color: $almost-white-grey;
 		color: black;
 		display: block;
 		padding: 1rem;
 		text-decoration: none;
 	}
 	a:hover {
-		background: #e4e4e4;
+		background-color: $light-grey;
 	}
 	h2 {
 		margin-bottom: 0;
