--- a/src/components/footer.module.scss
+++ b/src/components/footer.module.scss
@@ -1,6 +1,10 @@
+@import '../styles/variables.scss';
+
 .footer {
 	display: flex;
+	position: relative;
 	flex-grow: 1;
+	z-index: 100;
 	flex-direction: column;
 	align-items: center;
 	justify-content: space-between;
@@ -9,5 +13,61 @@
 	padding: 1rem 2rem 1rem 2rem;
 	@media (min-width: 400px) {
 		flex-direction: row;
+	}
+	margin: 0;
+	&:before,
+	&:after {
+		background: $secondary-color;
+		content: '';
+		display: block;
+		height: 100%;
+		left: 0;
+		position: absolute;
+		right: 0;
+		z-index: -1;
+	}
+
+	&:before {
+		top: 0;
+		transform: skewY(2deg);
+		transform-origin: 100% 0;
+	}
+
+	&:after {
+		bottom: 0;
+		transform: skewY(0deg);
+		@media (min-width: 900px) {
+			min-height: 50px;
+		}
+		transform-origin: 200%;
+	}
+}
+
+.footerBG {
+	position: absolute;
+	top: 200%;
+	bottom: -50%;
+	right: 0;
+	left: 0;
+	width: 100%;
+	height: 400%;
+	background-image: linear-gradient(to right, #90ff28 0%, #f6fa03 100%);
+	transform: skewY(6deg);
+	transform-origin: bottom right;
+	opacity: .5;
+}
+
+.rss {
+	font-size: $s-size;
+	font-weight: bold;
+	color: white;
+	background-color: rgb(29, 29, 29);
+	box-shadow: none;
+	&:hover {
+		color: $primary-color;
+	}
+	@media (min-width: 400px) {
+		background-color: rgb(29, 29, 29);
+		box-shadow: -10px -25px 0 25px rgb(29, 29, 29);
 	}
 }
