--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -1,19 +1,6 @@
 @import '../styles/variables.scss';
 @import '../styles/components.scss';
 
-.nav-item {
-	color: black;
-	font-size: 1rem;
-	margin: 0;
-	margin-right: 1.3rem;
-	text-decoration: none;
-	text-transform: uppercase;
-	font-weight: bold;
-}
-.nav-item:hover {
-	color: $light-grey;
-}
-
 .header {
 	//sticky
 	position: fixed;
@@ -29,8 +16,8 @@
 	justify-content: space-between;
 	max-height: 140px;
 	padding: 1rem;
-	@media (min-width: $header-breakpoint) {
-		padding: 1rem 2rem 0 4rem;
+	@media (min-width: 900px) {
+		padding: 1rem 4rem 0 4rem;
 		max-height: 90px;
 		flex-direction: row;
 	}
@@ -39,28 +26,80 @@
 		max-height: 90px;
 		flex-direction: row;
 	}
-	box-shadow: 0 0 2px rgba(0, 0, 0, 0.1);
-	// background-color: #f4f4f4;
-	background-color: white;
+}
+
+.headerBG {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	left: 0;
+	width: 100%;
+	height: 200%;
+	background-image: linear-gradient(to right, #43e97b 0%, #38f9d7 100%);
+	transform: skewY(-6deg);
+	transform-origin: top left;
 }
 
 .title {
-	color: #000;
-	font-size: 3rem;
+	color: white;
+	position: relative;
 	text-decoration: none;
 	padding-top: 1rem;
-	@media (min-width: $header-breakpoint) {
+	font-size: 4rem;
+	top: -20%;
+	@media (min-width: 450px) {
 		padding: 0;
+		font-size: $l-size;
 	}
+	// @media (min-width: $header-breakpoint) {
+	// 	padding: 0;
+	// 	font-size: $l-size;
+	// }
 }
 
 .nav-list {
+	position: relative;
 	display: flex;
+	flex-direction: column;
+	display: flex;
+	top: -50%;
 	list-style-type: none;
 	margin-left: 1rem;
-	margin-bottom: 1rem;
+	margin-top: 0;
+	@media (min-width: 450px) {
+		flex-direction: row;
+		top: -30%;
+	}
+	@media (min-width: 900px) {
+		margin-top: $m-size;
+		flex-direction: row;
+		top: 0;
+	}
+	background-color: $dark-grey;
+	// box-shadow: -10px -25px 0 25px $dark-grey;
 }
-
+.nav-item {
+	color: $secondary-color;
+	display: block;
+	position: relative;
+	font-size: $s-size;
+	margin: 0;
+	margin-right: $s-size;
+	text-decoration: none;
+	text-transform: uppercase;
+	font-weight: bold;
+	border: none;
+	// text-shadow: 3px 3px white;
+	&:hover {
+		color: white;
+		background-color: rgb(29, 29, 29);
+		box-shadow: -20px -20px 0 25px rgb(29, 29, 29);
+		// background-color: ;
+	}
+}
 .active-nav-item {
-	color: $dark-grey;
+	color: white;
+	border-bottom: 40px solid $secondary-color;
+	font-size: $m-size;
 }
