--- a/src/pages/blog.module.scss
+++ b/src/pages/blog.module.scss
@@ -1,4 +1,5 @@
 @import '../styles/variables.scss';
+@import '../styles/components.scss';
 
 .posts {
 	width: 100%;
@@ -8,6 +9,7 @@
 
 .post {
 	margin: 1rem 0;
+	border-left: 60px solid $secondary-color;
 	a {
 		background-color: $almost-white-grey;
 		color: black;
@@ -22,7 +24,7 @@
 		margin-bottom: 0;
 	}
 	p {
-		color: #777777;
+		color: $dark-grey;
 		font-size: .8rem;
 		font-style: italic;
 	}
