--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -10,4 +10,5 @@ $almost-white-grey: #f4f4f4;
 $light-grey: #e4e4e4;
 $dark-grey: rgb(170, 170, 170);
 
-$accent: rgb(0, 255, 200);
+$primary-color: rgb(0, 255, 200);
+$secondary-color: rgb(228, 253, 5);
