--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,6 +9,7 @@ $xl-size: 8rem;
 $almost-white-grey: #f4f4f4;
 $light-grey: #e4e4e4;
 $dark-grey: rgb(170, 170, 170);
+$off-black: rgb(29, 29, 29);
 
 $primary-color: rgb(0, 255, 200);
 $secondary-color: rgb(228, 253, 5);
