--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -21,7 +21,7 @@
 		max-height: 90px;
 		flex-direction: row;
 	}
-	@media (min-width: 1000px) {
+	@media (min-width: 1100px) {
 		padding: 1rem 7rem 0 8rem;
 		max-height: 90px;
 		flex-direction: row;
@@ -47,7 +47,7 @@
 	text-decoration: none;
 	padding-top: 1rem;
 	font-size: 4rem;
-	top: -50%;
+	top: 0%;
 	@media (min-width: 450px) {
 		padding: 0;
 		top: -20%;
@@ -65,14 +65,13 @@
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	top: -80%;
+	top: 0%;
 	list-style-type: none;
-	margin-left: 1rem;
-	margin-top: 0;
+	margin: 0 1rem 0 1rem;
 	@media (min-width: 450px) {
 		flex-direction: row;
 		flex-wrap: nowrap;
-		top: -60%;
+		top: -20%;
 	}
 	@media (min-width: 900px) {
 		margin-top: $m-size;
