--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -5,7 +5,7 @@
 	flex-grow: 1;
 	width: 100%;
 	padding: $s-size;
-	margin-top: 230px;
+	margin-top: 260px;
 	max-width: 850px;
 	@media (min-width: 900px) {
 		margin-top: 110px;
@@ -19,6 +19,14 @@
 	display: flex;
 	align-self: flex-end;
 	justify-content: flex-end;
+	// font-size: 2.25rem; // default for h1
+	font-size: 3rem;
+	@media (min-width: 450px) {
+		font-size: 4rem;
+	}
+	@media (min-width: 800px) {
+		font-size: $l-size;
+	}
 }
 
 .linkButton {
