--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -48,9 +48,9 @@
 	margin: 1rem 1.5rem 1rem 0;
 	text-decoration: none;
 	background: $primary-color;
-	font-size: $s-size;
+	font-size: $m-size;
 	&:hover {
-		background: lighten($color:$primary-color, $amount: 20%);
+		background: $dark-grey;
 		background-position: right center;
 	}
 }
@@ -63,7 +63,7 @@
 	padding: .7rem 1.9rem;
 	margin: 1rem 1.5rem 1rem 0;
 	text-decoration: none;
-	font-size: $s-size;
+	font-size: $m-size;
 	&:hover {
 		background: $secondary-color;
 		background-position: right center;
