--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -48,7 +48,7 @@
 	margin: 1rem 1.5rem 1rem 0;
 	text-decoration: none;
 	background: $primary-color;
-	font-size: $m-size;
+	font-size: $s-size;
 	&:hover {
 		background: $dark-grey;
 		background-position: right center;
@@ -63,7 +63,7 @@
 	padding: .7rem 1.9rem;
 	margin: 1rem 1.5rem 1rem 0;
 	text-decoration: none;
-	font-size: $m-size;
+	font-size: $s-size;
 	&:hover {
 		background: $secondary-color;
 		background-position: right center;
