--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -42,6 +42,7 @@
 
 .linkButton {
 	outline: none;
+	cursor: pointer;
 	border: 0 none;
 	color: white;
 	padding: .8rem 2rem;
@@ -57,6 +58,7 @@
 
 .borderButton {
 	background: none;
+	cursor: pointer;
 	outline: none;
 	border: 2px solid $primary-color;
 	color: $primary-color;
