--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -11,5 +11,5 @@ $light-grey: #e4e4e4;
 $dark-grey: rgb(170, 170, 170);
 $off-black: rgb(29, 29, 29);
 
-$primary-color: rgb(0, 255, 200);
-$secondary-color: rgb(228, 253, 5);
+$primary-color: #00ffc8;
+$secondary-color: #e4fd05;
