styling form and footer for small resolutions

--- a/src/components/footer.module.scss
+++ b/src/components/footer.module.scss
@@ -11,6 +11,7 @@
 	justify-content: space-evenly;
 	min-width: 100vw;
 	max-height: 160px;
+	margin-top: $s-size;
 	padding: 1rem 2rem 1rem 2rem;
 	@media (min-width: 400px) {
 		flex-direction: row;
