--- a/src/components/footer.module.scss
+++ b/src/components/footer.module.scss
@@ -11,12 +11,12 @@
 	justify-content: space-evenly;
 	min-width: 100vw;
 	max-height: 160px;
-	margin-top: $s-size;
 	padding: 1rem 2rem 1rem 2rem;
 	@media (min-width: 400px) {
 		flex-direction: row;
 	}
 	margin: 0;
+	margin-top: $m-size;
 	background-color: $secondary-color;
 	&:before {
 		position: absolute;
